--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-image-gallery": "^1.2.9",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
