--- a/package.json
+++ b/package.json
@@ -8,8 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.27.2",
+    "bootstrap": "^5.2.0",
+    "bootstrap-vue": "^2.22.0",
+    "bootstrap-vue-editable-table": "^0.1.7",
     "core-js": "^3.8.3",
-    "vue": "^2.6.14"
+    "sockjs-client": "^1.6.1",
+    "vue": "^2.6.14",
+    "vue-router": "^3.0.1",
+    "webstomp-client": "^1.2.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
