--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap-vue": "^2.22.0",
     "bootstrap-vue-editable-table": "^0.1.7",
     "core-js": "^3.8.3",
+    "lodash": "^4.17.21",
     "sockjs-client": "^1.6.1",
     "vue": "^2.6.14",
     "vue-router": "^3.0.1",
