--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -4,7 +4,8 @@ phases:
   install:
      commands: 
       - sudo apt-get update
-      - sudo -apt-get install -y nodejs
+      - sudo apt-get install build-essential
+      - sudo -apt-get install nodejs
       - sudo apt install npm
   pre_build:
     commands:
