--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -5,7 +5,7 @@ phases:
      commands: 
       - sudo apt-get update
       - sudo apt-get install build-essential
-      - sudo -apt-get install nodejs
+      - sudo apt-get install nodejs
       - sudo apt install npm
   pre_build:
     commands:
