--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -4,7 +4,7 @@ phases:
   install:
      commands: 
       - sudo apt-get update
-      - sudo apt-get install build-essential
+      - sudo apt-get install -y build-essential
       - sudo apt-get install -y nodejs
       - sudo apt install npm
   pre_build:
