--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -6,7 +6,7 @@ phases:
       - sudo apt-get update
       - sudo apt-get install -y build-essential
       - sudo apt-get install -y nodejs
-      - sudo apt install npm
+      - sudo apt-get install npm
   pre_build:
     commands:
       - echo Nothing to do in the pre_build phase...
