--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -5,8 +5,8 @@ phases:
     commands: 
       - sudo apt-get update
       - sudo apt-get install -y build-essential
+      - sudo apt install npm
       - sudo apt-get install -y nodejs
-      - sudo apt-get install npm
       
   pre_build:
     commands:
