--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -16,7 +16,7 @@ phases:
       - echo Building the source code using maven
       - mvn clean package -DskipTests -Dspring-boot.run.profiles=$PROFILE
       - echo Building the Docker image...
-      - docker build --build-arg PROFILE=$PROFILE -t $IMAGE_REPO_NAME:$IMAGE_TAG .
+      - docker build --build-arg $IMAGE_REPO_NAME:$IMAGE_TAG .
       - docker tag $IMAGE_REPO_NAME:$IMAGE_TAG $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
   post_build:
     commands:
