--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -5,8 +5,8 @@ phases:
     runtime-versions:
       nodejs: 12
     commands:
-      - aws configure set aws_access_key_id $KEY_ID --profile $EKS_PROFILE
-      - aws configure set aws_secret_access_key $SECRET_KEY --profile $EKS_PROFILE
+      - aws configure set aws_access_key_id $KEY_ID 
+      - aws configure set aws_secret_access_key $SECRET_KEY
   pre_build:
     commands:
       - echo Logging in to Amazon ECR...
